--- a/frontend/basics/javascript/8.12.md
+++ b/frontend/basics/javascript/8.12.md
@@ -8,6 +8,7 @@
     - usereducer | 作为useeffect依赖
   - 模拟purecomponent（memo useeffect）
 - npm：npm模块加载
+  - 和模块安装顺序有关，先安装的铺平到外层，后安装的放到各自小包内，出现冗余可以用dedupe命令做
 - webpack：webpack优化，有些过webpack插件或者loader吗，treeshaking原理
   - treeshaking是利用es module的静态特性来做的，shake掉未引用的export的代码，因为可能不全是esm，所以可以通过sideeffects字段来手动设置
   - webpack优化：
