--- a/frontend/basics/javascript/8.17.md
+++ b/frontend/basics/javascript/8.17.md
@@ -182,4 +182,12 @@
 - 项目内容
 - BFC JwT
 - 装饰器
+  - ioc是将控制交给了容器，实现对象间解耦
+  - di是为了不需要容器.get这种，而是直接注入
+  - di的实现依赖于装饰器和metadata，装饰器标记需要注入，然后解析出metadata对应的需要注入的类的类型，然后对类实例化然后赋值到依赖这个类的类里，实现注入
 - 12号的东西
+- webpack
+  - 三步走
+    - 根据配置生成compiler实例和compilation对象（所有需要的数据都在这个对象上），并加载内置plugin，注册任务节点事件
+    - 生成module，转成ast生成依赖，module根据entry生成chunk
+    - 根据模板进行文件生成
